Now the parsing of json file is not returning a null foreign key for the parent child relationship

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
+spring.datasource.generate-unique-name=true
 spring.datasource.name=twitterfeeds
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
